Refs issue #758 reverse.js in correct location
- Updated local_settings.py.example to get reverse.js in the correct locatin if "manage.py collectstatic_js_reverse" is applied
- Updated documentation of 0.9.1 release to instruct users to update local_settings.py accordingly (only in case of running website in Virtual directory as otherwise it has no effect)

Update of settings.py is not necessary as STATIC_ROOT is not defined here (anymore)

--- a/openrem/openremproject/local_settings.py.example
+++ b/openrem/openremproject/local_settings.py.example
@@ -31,6 +31,10 @@ MEDIA_ROOT = ''
 # Example: "/home/media/media.lawrence.com/static/"
 STATIC_ROOT = ''
 
+# Take care the output path of "manage.py collectstatic_js_reverse" is correct
+# It is dependent on STATIC_ROOT
+JS_REVERSE_OUTPUT_PATH = os.path.join(STATIC_ROOT, 'js', 'django_reverse')
+
 # You should generate a new secret key. Make this unique, and don't
 # share it with anybody. See the docs.
 SECRET_KEY = 'hmj#)-$smzqk*=wuz9^a46rex30^$_j$rghp+1#y&amp;i+pys5b@$'
