--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = python2.7
+envlist = py36
 skipsdist = true
 
 [testenv]
@@ -14,8 +14,7 @@ commands = pip install coverage
 [testenv:ci]
 usedevelop = {[testenv]usedevelop}
 passenv = COVERALLS_REPO_TOKEN CODACY_PROJECT_TOKEN
-commands = pip install https://bitbucket.org/edmcdonagh/pynetdicom/get/default.tar.gz#egg=pynetdicom-0.8.2b2
-           {[testenv]commands}
+commands = {[testenv]commands}
            pip install coveralls
            coveralls
            coverage xml
