Hadn't copied changes to local_settings to the example. Refs #404, #457

--- a/openrem/openremproject/local_settings.py.example
+++ b/openrem/openremproject/local_settings.py.example
@@ -1,5 +1,5 @@
-LOCAL_SETTINGS = True
-from settings import *
+# LOCAL_SETTINGS = True
+from .settings import *
 
 
 # Choose your database and fill in the details below. If testing, you
