Django 1.9, added new --parallel switch to test. Refs #404, #457

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = true
 usedevelop=True
 commands = pip install coverage
            python openrem/manage.py makemigrations remapp
-           coverage run --source=openrem/remapp openrem/manage.py test remapp
+           coverage run --source=openrem/remapp openrem/manage.py test remapp --parallel
 
 ; For use by the CI server
 ; python-coveralls only supported on Linux / OSX
