--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,11 +6,16 @@ pipelines:
         script:
           - mv openrem/openremproject/local_settings.py{.example,}
           - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
-          - sed -i "/ENGINE/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
-          - sed -i "/NAME/c\        'NAME': 'pipelines',"
-          - sed -i "/USER/c\        'USER': 'test_user',"
-          - sed -i "/PASSWORD/c\        'PASSWORD': 'test_user_password',"
-          - sed -i "/HOST/c\        'HOST': 'test_user_password',"
+          - >-
+            sed -i "/ENGINE/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/NAME/c\        'NAME': 'pipelines',"
+          - >-
+            sed -i "/USER/c\        'USER': 'test_user',"
+          - >-
+            sed -i "/PASSWORD/c\        'PASSWORD': 'test_user_password',"
+          - >-
+            sed -i "/HOST/c\        'HOST': 'test_user_password',"
           - mv openrem/openremproject/wsgi.py{.example,}
           - pip install psycopg2-binary
           - pip install -U tox
