--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,15 +7,15 @@ pipelines:
           - mv openrem/openremproject/local_settings.py{.example,}
           - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
           - >-
-            sed -i "/ENGINE/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
+            sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
           - >-
-            sed -i "/NAME/c\        'NAME': 'pipelines'," openrem/openremproject/local_settings.py
+            sed -i "/'NAME':/c\        'NAME': 'pipelines'," openrem/openremproject/local_settings.py
           - >-
-            sed -i "/USER/c\        'USER': 'test_user'," openrem/openremproject/local_settings.py
+            sed -i "/'USER':/c\        'USER': 'test_user'," openrem/openremproject/local_settings.py
           - >-
-            sed -i "/PASSWORD/c\        'PASSWORD': 'test_user_password'," openrem/openremproject/local_settings.py
+            sed -i "/'PASSWORD':/c\        'PASSWORD': 'test_user_password'," openrem/openremproject/local_settings.py
           - >-
-            sed -i "/HOST/c\        'HOST': 'test_user_password'," openrem/openremproject/local_settings.py
+            sed -i "/'HOST':/c\        'HOST': 'test_user_password'," openrem/openremproject/local_settings.py
           - mv openrem/openremproject/wsgi.py{.example,}
           - pip install psycopg2-binary
           - pip install -U tox
