--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ skipsdist = true
 
 [testenv]
 usedevelop=True
-commands = pip install coverage
+commands = pip install psycopg2-binary
+           pip install coverage
            python openrem/manage.py makemigrations remapp
            coverage run --source=openrem/remapp openrem/manage.py test remapp --parallel
 
