--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ skipsdist = true
 
 [testenv]
 usedevelop=True
-commands = pip install psycopg2-binary
+commands = echo "local all test_user md5" >> /etc/postgresql/10/main/pg_hba.conf
+           service postgresql restart
+           pip install psycopg2-binary
            pip install coverage
            python openrem/manage.py makemigrations remapp
            coverage run --source=openrem/remapp openrem/manage.py test remapp --parallel
