--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ usedevelop=True
 commands = pip install psycopg2-binary
            pip install coverage
            python openrem/manage.py makemigrations remapp
-           coverage run --source=openrem/remapp openrem/manage.py test remapp --parallel
+           coverage run --parallel-mode --source=openrem/remapp openrem/manage.py test remapp --parallel
 
 ; For use by the CI server
 ; python-coveralls only supported on Linux / OSX
