--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ commands = pip install psycopg2-binary
 usedevelop = {[testenv]usedevelop}
 passenv = COVERALLS_REPO_TOKEN CODACY_PROJECT_TOKEN
 commands = {[testenv]commands}
+           ls
+           pwd
            coverage xml
            pip install coveralls
            coveralls
