Added a combine step

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ passenv = COVERALLS_REPO_TOKEN CODACY_PROJECT_TOKEN
 commands = {[testenv]commands}
            ls -la
            pwd
+           coverage combine
+           ls -la
            coverage xml
            pip install coveralls
            coveralls
