--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ usedevelop=True
 commands = pip install psycopg2-binary
            pip install coverage
            python openrem/manage.py makemigrations remapp
-           coverage run --parallel-mode --source=openrem/remapp openrem/manage.py test remapp --parallel
+           coverage run openrem/manage.py test remapp --parallel
 
 ; For use by the CI server
 ; python-coveralls only supported on Linux / OSX
@@ -16,9 +16,9 @@ commands = pip install psycopg2-binary
 usedevelop = {[testenv]usedevelop}
 passenv = COVERALLS_REPO_TOKEN CODACY_PROJECT_TOKEN
 commands = {[testenv]commands}
+           coverage combine
            pip install coveralls
            coveralls
-           coverage combine
            coverage xml
            pip install codacy-coverage
            python-codacy-coverage -r coverage.xml
