Still coveralls error. Removing coveralls to test codacy

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,8 @@ usedevelop = {[testenv]usedevelop}
 passenv = COVERALLS_REPO_TOKEN CODACY_PROJECT_TOKEN
 commands = {[testenv]commands}
            coverage combine
-           pip install coveralls
-           coveralls
+;           pip install coveralls
+;           coveralls
            coverage xml
            pip install codacy-coverage
            python-codacy-coverage -r coverage.xml
