Adding coveralls back in. Works locally.

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ skipsdist = true
 usedevelop=True
 commands = pip install psycopg2-binary
            pip install coverage
+           pip install coveralls
            python openrem/manage.py makemigrations remapp
            coverage run openrem/manage.py test remapp --parallel
 
@@ -17,8 +18,7 @@ usedevelop = {[testenv]usedevelop}
 passenv = COVERALLS_REPO_TOKEN CODACY_PROJECT_TOKEN
 commands = {[testenv]commands}
            coverage combine
-;           pip install coveralls
-;           coveralls
+           coveralls
            coverage xml
            pip install codacy-coverage
            python-codacy-coverage -r coverage.xml
