Added tblib to the tox file to invetsigate why tests are failing. References issue #808

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands = {[testenv]commands}
            coverage combine
            coveralls
            coverage xml
+           pip install tblib
            pip install codacy-coverage
            python-codacy-coverage -r coverage.xml
 
