Fixing exclusions to remove js that we import, plus ignoring hard coded passwords that aren't.

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -8,7 +8,15 @@ exclude_paths:
   - 'openrem/remapp/static/js/django_reverse/**'
   - 'openrem/remapp/static/js/**.min.js'
   - 'openrem/remapp/static/js/bootstrap-datepicker.js'
+  - 'openrem/remapp/static/js/bootstrap.js'
+  - 'openrem/remapp/static/js/bootstrap.min.js'
+  - 'openrem/remapp/static/js/charts/**'
+  - 'openrem/remapp/static/js/chroma.min.js'
   - 'openrem/remapp/static/js/datepicker.js'
+  - 'openrem/remapp/static/js/html5shiv.min.js'
+  - 'openrem/remapp/static/jsjquery-1.11.0.min.js'
   - 'openrem/remapp/static/js/npm.js'
+  - 'openrem/remapp/static/js/respond.min.js'
+  - 'openrem/remapp/static/js/response.min.js'
   - 'openrem/remapp/static/js/sorttable.js'
   - 'openrem/remapp/tests/**'
