Updated Bitbucket pipeline and fabfile. Temporarily changed branch to be used to be this one. Fingers crossed... Refs #814

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -31,20 +31,35 @@ definitions:
         POSTGRES_DB: openremdb
         POSTGRES_USER: openremuser
         POSTGRES_PASSWORD: openremuserpass
-#  branches:
-#    develop:  # Commits to the develop branch are tested and deployed to dev.openrem.org on success
-#      - step:
-#          script:
-#            - mv openrem/openremproject/local_settings.py{.example,}
-#            - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
-#            - mv openrem/openremproject/wsgi.py{.example,}
-#            - pip install -U tox
-#            - tox -e ci
-#            - pip install "fabric < 2"
-#            - mkdir -p ~/.ssh
-#            - cat deploy_tools/my_known_hosts >> ~/.ssh/known_hosts
-#            - (umask  077 ; echo $BB_OPENREM_KEY | base64 --decode > ~/.ssh/id_rsa)
-#            - fab deploy:host=deploy@dev.openrem.org
+  branches:
+    issue814fabric:  # Commits to the develop branch are tested and deployed to dev.openrem.org on success
+      - step:
+          script:
+            - mv openrem/openremproject/local_settings.py{.example,}
+            - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
+            - >-
+              sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
+            - >-
+              sed -i "/'NAME':/c\        'NAME': 'openremdb'," openrem/openremproject/local_settings.py
+            - >-
+              sed -i "/'USER':/c\        'USER': 'openremuser'," openrem/openremproject/local_settings.py
+            - >-
+              sed -i "/'PASSWORD':/c\        'PASSWORD': 'openremuserpass'," openrem/openremproject/local_settings.py
+            - >-
+              sed -i "/'HOST':/c\        'HOST': '127.0.0.1'," openrem/openremproject/local_settings.py
+            - >-
+              sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
+            - mv openrem/openremproject/wsgi.py{.example,}
+            - pip install -U tox
+            - tox -e ci
+            - pip install fabric
+            - pip install patchwork
+            - mkdir -p ~/.ssh
+            - cat deploy_tools/my_known_hosts >> ~/.ssh/known_hosts
+            - (umask  077 ; echo $BB_OPENREM_KEY | base64 --decode > ~/.ssh/id_rsa)
+            - fab --hosts deploy@dev.openrem.org deploy
+          services:
+            - postgres
 #    '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
 #      - step:
 #          script:
