--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -49,6 +49,7 @@ pipelines:
             - mkdir -p ~/.ssh
             - cat deploy_tools/my_known_hosts >> ~/.ssh/known_hosts
             - (umask  077 ; echo $BB_OPENREM_KEY | base64 --decode > ~/.ssh/id_rsa)
+            - echo $BITBUCKET_COMMIT
             - fab --hosts deploy@dev.openrem.org deploy
           services:
             - postgres
