Sending fetch and reset commands via pipeline. Refs #814

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -51,8 +51,8 @@ pipelines:
             - (umask  077 ; echo $BB_OPENREM_KEY | base64 --decode > ~/.ssh/id_rsa)
             - echo $BITBUCKET_COMMIT
 #            - fab --hosts deploy@dev.openrem.org deploy
-            - ssh deploy@dev.openrem.org "uname -a"
-            - ssh deploy@dev.openrem.org "echo $BITBUCKET_COMMIT > latestcommit.txt"
+            - ssh deploy@dev.openrem.org "cd /home/deploy/sites/dev.openrem.org/source/ && git fetch"
+            - ssh deploy@dev.openrem.org "cd /home/deploy/sites/dev.openrem.org/source/ && git reset --hard $BITBUCKET_COMMIT"
           services:
             - postgres
 #    '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
