--- a/openrem/openremproject/local_settings.py.example
+++ b/openrem/openremproject/local_settings.py.example
@@ -1,4 +1,3 @@
-# LOCAL_SETTINGS = True
 from .settings import *
 
 
@@ -9,7 +8,7 @@ from .settings import *
 
 DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.sqlite3',  # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
+        'ENGINE': 'django.db.backends.sqlite3',  # Add 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
         'NAME': '/home/user/openrem/openrem.db', # Or path to database file if using sqlite3.
         'USER': '',                              # Not used with sqlite3.
         'PASSWORD': '',                          # Not used with sqlite3.
