--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,15 @@
 image: python:3.6
 
-pipelines:
-  default:  # Standard commits are tested but not deployed
-    - step:
+definitions:
+  services:
+    postgres:
+      image: postgres
+      environment:
+        POSTGRES_DB: openremdb
+        POSTGRES_USER: openremuser
+        POSTGRES_PASSWORD: openremuserpass
+  steps:
+    - step: &test
         name: run django tests
         script:
           - mv openrem/openremproject/local_settings.py{.example,}
@@ -24,33 +31,18 @@ pipelines:
           - tox -e ci
         services:
           - postgres
+
+pipelines:
+  default:  # Standard commits are tested but not deployed
+    - step: *test
   branches:
     develop:  # Commits to the develop branch are tested and deployed to dev.openrem.org on success
       - step:
-          name: run django tests
-          script:
-            - mv openrem/openremproject/local_settings.py{.example,}
-            - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
-            - >-
-              sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
-            - >-
-              sed -i "/'NAME':/c\        'NAME': 'openremdb'," openrem/openremproject/local_settings.py
-            - >-
-              sed -i "/'USER':/c\        'USER': 'openremuser'," openrem/openremproject/local_settings.py
-            - >-
-              sed -i "/'PASSWORD':/c\        'PASSWORD': 'openremuserpass'," openrem/openremproject/local_settings.py
-            - >-
-              sed -i "/'HOST':/c\        'HOST': '127.0.0.1'," openrem/openremproject/local_settings.py
-            - >-
-              sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
-            - mv openrem/openremproject/wsgi.py{.example,}
-            - pip install -U tox
-            - tox -e ci
-          services:
-            - postgres
+          <<: *test
+          name: run django tests - develop
       - step:
           name: deploy to dev.openrem.org
-          deployment: develop
+          deployment: develop  # deployment has $server as a variable = dev.openrem.org
           script:
             - mkdir -p ~/.ssh
             - cat deploy_tools/my_known_hosts >> ~/.ssh/known_hosts
@@ -66,55 +58,28 @@ pipelines:
             - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py collectstatic --noinput"
             - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py makemigrations remapp --noinput"
             - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py migrate --noinput"
-            - ssh deploy@$server "sudo /usr/sbin/service gunicorn-dev.openrem.org restart"
-# Commented out until testing.openrem.org has been updated to 0.10
-#    '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
-#      - step:
-#          name: run django tests
-#          script:
-#            - mv openrem/openremproject/local_settings.py{.example,}
-#            - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
-#            - >-
-#              sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
-#            - >-
-#              sed -i "/'NAME':/c\        'NAME': 'openremdb'," openrem/openremproject/local_settings.py
-#            - >-
-#              sed -i "/'USER':/c\        'USER': 'openremuser'," openrem/openremproject/local_settings.py
-#            - >-
-#              sed -i "/'PASSWORD':/c\        'PASSWORD': 'openremuserpass'," openrem/openremproject/local_settings.py
-#            - >-
-#              sed -i "/'HOST':/c\        'HOST': '127.0.0.1'," openrem/openremproject/local_settings.py
-#            - >-
-#              sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
-#            - mv openrem/openremproject/wsgi.py{.example,}
-#            - pip install -U tox
-#            - tox -e ci
-#          services:
-#            - postgres
-#      - step:
-#          name: deploy to testing.openrem.org
-#          deployment: testing
-#          script:
-#            - mkdir -p ~/.ssh
-#            - cat deploy_tools/my_known_hosts >> ~/.ssh/known_hosts
-#            - (umask  077 ; echo $BB_OPENREM_KEY | base64 --decode > ~/.ssh/id_rsa)
-#            - echo $BITBUCKET_COMMIT
-#            - SITE_FOLDER="/home/deploy/sites/$server/"
-#            - SOURCE_FOLDER=$SITE_FOLDER"source"
-#            - ssh deploy@$server "cd $SOURCE_FOLDER && git fetch"
-#            - ssh deploy@$server "cd $SOURCE_FOLDER && git reset --hard $BITBUCKET_COMMIT"
-#            - VENV_PIP=$SITE_FOLDER"virtualenv/bin/pip"
-#            - ssh deploy@$server "$VENV_PIP install -e $SOURCE_FOLDER"
-#            - VENV_PYTHON=$SITE_FOLDER"virtualenv/bin/python"
-#            - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py collectstatic --noinput"
-#            - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py makemigrations remapp --noinput"
-#            - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py migrate --noinput"
-#            - ssh deploy@$server "sudo /usr/sbin/service gunicorn-dev.openrem.org restart"
-definitions:
-  services:
-    postgres:
-      image: postgres
-      environment:
-        POSTGRES_DB: openremdb
-        POSTGRES_USER: openremuser
-        POSTGRES_PASSWORD: openremuserpass
+            - ssh deploy@$server "sudo /usr/sbin/service gunicorn-$server restart"
+    '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
+      - step:
+          <<: *test
+          name: run django tests - testing
+      - step:
+          name: deploy to testing.openrem.org
+          deployment: testing  # deployment has $server as a variable = testing.openrem.org
+          script:
+            - mkdir -p ~/.ssh
+            - cat deploy_tools/my_known_hosts >> ~/.ssh/known_hosts
+            - (umask  077 ; echo $BB_OPENREM_KEY | base64 --decode > ~/.ssh/id_rsa)
+            - echo $BITBUCKET_COMMIT
+            - SITE_FOLDER="/home/deploy/sites/$server/"
+            - SOURCE_FOLDER=$SITE_FOLDER"source"
+            - ssh deploy@$server "cd $SOURCE_FOLDER && git fetch"
+            - ssh deploy@$server "cd $SOURCE_FOLDER && git reset --hard $BITBUCKET_COMMIT"
+            - VENV_PIP=$SITE_FOLDER"virtualenv/bin/pip"
+            - ssh deploy@$server "$VENV_PIP install -e $SOURCE_FOLDER"
+            - VENV_PYTHON=$SITE_FOLDER"virtualenv/bin/python"
+            - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py collectstatic --noinput"
+            - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py makemigrations remapp --noinput"
+            - ssh deploy@$server "cd $SOURCE_FOLDER && $VENV_PYTHON openrem/manage.py migrate --noinput"
+            - ssh deploy@$server "sudo /usr/sbin/service gunicorn-$server restart"
+
