--- a/.pylintrc
+++ b/.pylintrc
@@ -236,6 +236,7 @@ good-names=i,
            k,
            ex,
            Run,
+           logger,
            _
 
 # Include a hint for the correct naming format with invalid-name
