--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   web:
     build: ./openrem
-    command: python /opt/venv/lib/python3.8/site-packages/openrem/manage.py runserver 0.0.0.0:8000
+    command: python  manage.py runserver 0.0.0.0:8000
     volumes:
       - media_volume:/home/app/web/mediafiles
     ports:
