Using nginx, but static files not currently in the right place. Refs #793 [skip ci]

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
     command: gunicorn openremproject.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - media_volume:/home/app/openrem/mediafiles
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     env_file:
       - ./.env.prod
     depends_on:
@@ -20,7 +20,16 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/home/app/openrem/staticfiles
+    ports:
+      - 1337:80
+    depends_on:
+      - openrem
 
 volumes:
   postgres_data:
   media_volume:
+  static_volume:
