--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream hello_django {
-    server web:8000;
+upstream openremproject {
+    server openrem:8000;
 }
 
 server {
@@ -7,17 +7,17 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://hello_django;
+        proxy_pass http://openremproject;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
 	location /staticfiles/ {
-        alias /home/app/web/staticfiles/;
+        alias /home/app/openrem/staticfiles/;
     }
 
     location /mediafiles/ {
-        alias /home/app/web/mediafiles/;
+        alias /home/app/openrem/mediafiles/;
     }
 }
