--- a/docker/openrem/Dockerfile.prod
+++ b/docker/openrem/Dockerfile.prod
@@ -7,6 +7,7 @@ ENV APP_HOME=/home/app/openrem
 ENV APP_VENV=/home/app/venv
 RUN mkdir $APP_HOME
 RUN mkdir $APP_HOME/mediafiles
+RUN mkdir $APP_HOME/staticfiles
 WORKDIR $HOME
 
 # set environment variables
