--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -24,6 +24,7 @@ services:
   nginx:
     build: ./nginx
     volumes:
+      - media_volume:/home/app/openrem/mediafiles
       - static_volume:/home/app/openrem/staticfiles
     ports:
       - 1337:80
