migrations needs to be persistent. Need to bind folder to be able to run openrem_rdsr.py etc on local files. Refs #793 [skip ci]

--- a/docker/.env.prod
+++ b/docker/.env.prod
@@ -10,3 +10,4 @@ SQL_PORT=5432
 DATABASE=postgres
 MEDIA_ROOT=/home/app/openrem/mediafiles
 STATIC_ROOT=/home/app/openrem/staticfiles
+LOG_LEVEL=DEBUG
