--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -9,6 +9,10 @@ services:
     volumes:
       - media_volume:/home/app/openrem/mediafiles
       - static_volume:/home/app/openrem/staticfiles
+      - migrations_volume:/home/app/openrem/remapp/migrations
+      - type: bind
+        source: ./scratch
+        target: /scratch
     expose:
       - 8000
     env_file:
@@ -35,3 +39,4 @@ volumes:
   postgres_data:
   media_volume:
   static_volume:
+  migrations_volume:
