RabbitMQ management status indicator now working. Refs #793 [skip ci]

--- a/docker/.env.prod
+++ b/docker/.env.prod
@@ -11,3 +11,4 @@ DATABASE=postgres
 MEDIA_ROOT=/home/app/openrem/mediafiles
 STATIC_ROOT=/home/app/openrem/staticfiles
 LOG_LEVEL=DEBUG
+BROKER_MGMT_URL=http://broker:15672/
