--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -20,6 +20,22 @@ services:
     depends_on:
       - db
       - broker
+
+  worker:
+    build:
+      context: ./openrem
+      dockerfile: Dockerfile.prod
+    command: celery worker -A openremproject -Q default --pidfile=/scratch/celery.pid --logfile=/scratch/celery.log
+    volumes:
+      - type: bind
+        source: ./scratch
+        target: /scratch
+    env_file:
+      - ./.env.prod
+    depends_on:
+      - db
+      - broker
+
   db:
     image: postgres:12.0-alpine
     volumes:
