--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -27,6 +27,7 @@ services:
       dockerfile: Dockerfile.prod
     command: celery worker -A openremproject -Q default --pidfile=/scratch/celery.pid --logfile=/scratch/celery.log
     volumes:
+      - media_volume:/home/app/openrem/mediafiles
       - type: bind
         source: ./scratch
         target: /scratch
