Added flower. Refs #793 [skip ci] not ready for testing

--- a/docker/.env.prod
+++ b/docker/.env.prod
@@ -12,3 +12,4 @@ MEDIA_ROOT=/home/app/openrem/mediafiles
 STATIC_ROOT=/home/app/openrem/staticfiles
 LOG_LEVEL=DEBUG
 BROKER_MGMT_URL=http://broker:15672/
+FLOWER_URL=http://flower
