--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   openrem:
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     command: gunicorn openremproject.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - media_volume:/home/app/openrem/mediafiles
@@ -24,7 +24,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     command: celery worker -A openremproject -Q default --pidfile=/scratch/celery.pid --logfile=/scratch/celery.log
     volumes:
       - media_volume:/home/app/openrem/mediafiles
@@ -40,7 +40,7 @@ services:
   flower:
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     command: celery flower -A openremproject
     expose:
       - 5555
