Changed scratch to imports, added folder. Added logs folder. Refs #793 [skip ci] not ready for testing

--- a/.env.prod
+++ b/.env.prod
@@ -10,6 +10,7 @@ SQL_PORT=5432
 DATABASE=postgres
 MEDIA_ROOT=/home/app/openrem/mediafiles
 STATIC_ROOT=/home/app/openrem/staticfiles
+LOG_ROOT=/logs
 LOG_LEVEL=DEBUG
 BROKER_MGMT_URL=http://broker:15672/
 FLOWER_URL=http://flower
