--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,11 @@ services:
       - static_volume:/home/app/openrem/staticfiles
       - migrations_volume:/home/app/openrem/remapp/migrations
       - type: bind
-        source: ./scratch
-        target: /scratch
+        source: ./imports
+        target: /imports
+      - type: bind
+        source: ./logs
+        target: /logs
     expose:
       - 8000
     env_file:
@@ -29,8 +32,8 @@ services:
     volumes:
       - media_volume:/home/app/openrem/mediafiles
       - type: bind
-        source: ./scratch
-        target: /scratch
+        source: ./logs
+        target: /logs
     env_file:
       - ./.env.prod
     depends_on:
