Giving flower access to the logs folder. Refs #793 [skip ci] not ready for testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,10 @@ services:
       context: .
       dockerfile: Dockerfile
     command: celery flower -A openremproject
+    volumes:
+      - type: bind
+        source: ./logs
+        target: /logs
     expose:
       - 5555
     env_file:
