Added restart: always to the components of the yml file. On my Windows computer this causes OpenREM and the associated components to automatically restart when the host computer is rebooted. Confirmed as working on my Windows system using Docker Desktop. References issue #793 [skip ci] as not ready for testing yet.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   openrem:
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
@@ -25,6 +26,7 @@ services:
       - broker
 
   worker:
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
@@ -41,6 +43,7 @@ services:
       - broker
 
   flower:
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
@@ -58,12 +61,14 @@ services:
       - broker
 
   db:
+    restart: always
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
   nginx:
+    restart: always
     build: ./nginx
     volumes:
       - media_volume:/home/app/openrem/mediafiles
@@ -73,6 +78,7 @@ services:
     depends_on:
       - openrem
   broker:
+    restart: always
     image: rabbitmq:3-management-alpine
 
 volumes:
