Changes to reduce the size of the image. Added  orthanc to start working out how to make use of it! Refs #793 [skip ci] not ready for testing

--- a/.dockerignore
+++ b/.dockerignore
@@ -15,3 +15,14 @@ Dockerfile*
 openrem/remapp/migrations/0*
 openrem/openremproject/wsgi.py
 openrem/openremproject/local_settings.py*
+openrem/remapp/tests
+imports
+logs
+.codacy.yml
+.coverage*
+.dockerignore
+.gitignore
+.pylintrc
+.readthedocs.yml
+.git
+.idea
