--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
+
   nginx:
     restart: always
     build: ./nginx
@@ -94,12 +95,15 @@ services:
 
   orthanc:
     container_name: orthanc
-    image: jodogne/orthanc:latest
+    build: ./orthanc
+#    image: jodogne/orthanc:latest
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
       - type: bind
         source: ./imports
         target: /imports
+    ports:
+      - 8042:8042
+      - 4242:4242
 
 volumes:
   postgres_data:
