Now using Orthanc Lua instead of wget. Took ages to work it out! Refs #793 [skip ci] not ready for testing

--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 192.168.99.100 openrem
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 192.168.99.100 openrem nginx
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=openrem_prod
 SQL_USER=openrem_user
